--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "mcp[cli]>=1.6.0",
+    "mcp>=1.8.0",
     "uvicorn>=0.27.0",
     "fastapi>=0.110.0",
     "httpx>=0.28.0",
