chore: 整理包管理相关文件、README等

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,31 @@
-# Python-generated files
+# Python
 __pycache__/
-*.py[oc]
+*.py[cod]
+*$py.class
+.Python
 build/
 dist/
+sdist/
+var/
 wheels/
-*.egg-info
+.installed.cfg
 
+# Virtual Environment
+.env
+.venv
+env/
+venv/
+ENV/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
 
 # Virtual environments
 .venv
@@ -15,5 +35,6 @@ wheels/
 *.kv
 src/imsdk/rust_db/RongCloud/*
 lib/rust_db/*
+*.lock
 
-package.json
+config.json
