--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,73 @@
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 [project]
-name = "rc-im-mcp-demo"
+name = "RC-IM-Native-MCP-Server"
 version = "0.1.0"
-description = "Add your description here"
+description = "基于MCP协议的融云IM服务（包装Rust SDK）"
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = [
-    "mcp>=1.8.0",
-    "uvicorn>=0.27.0",
-    "fastapi>=0.110.0",
-    "httpx>=0.28.0",
-    "diskcache>=5.6.0",
-    "requests>=2.31.0",
+authors = [
+    { name = "Rongcloud", email = "imsdk@rongcloud.cn" }
 ]
+dependencies = [
+    "mcp[cli]",
+    "uvicorn",
+    "pydantic",
+    "pydantic-settings",
+    "click>=8.0.0"
+]
+
+[project.optional-dependencies]
+dev = [
+    "pip-tools"
+]
+
+[project.scripts]
+rc-im-server = "src.server.server:cli"
+
+[project.urls]
+Homepage = "https://github.com/rongcloud/RC-IM-Native-MCP-Server"
+Repository = "https://github.com/rongcloud/RC-IM-Native-MCP-Server.git"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src", "lib"]
+include = [
+    "src/**/*.py",
+    "lib/**/*.py",
+    "lib/**/*.so",
+    "lib/**/*.dylib",
+    "lib/**/*.dll"
+]
+
+[tool.hatch.build]
+exclude = [
+    "src/imsdk/rust_db/",
+    "src/imsdk/rust_db/**/*",
+    "lib/rust_db/",
+    "lib/rust_db/**/*",
+    "**/*.db",
+    "**/*.db-shm",
+    "**/*.db-wal",
+    "**/*.kv",
+    ".vscode/",
+    ".idea/",
+    ".env",
+    ".venv",
+    ".DS_Store",
+    ".gitignore",
+    ".cursorrules",
+    "config.json",
+    "setup.py",
+    "main.py",
+    ".python-version"
+]
+artifacts = [
+    "src/imsdk/rust_db/**",
+    "lib/rust_db/**"
+]
+
+[tool.hatch.metadata]
+allow-direct-references = true
+
