--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "RC-IM-Native-MCP-Server"
-version = "0.1.0"
+name = "rc-im-native-mcp-server"
+version = "0.1.2"
 description = "基于MCP协议的融云IM服务（包装Rust SDK）"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -25,7 +25,7 @@ dev = [
 ]
 
 [project.scripts]
-rc-im-server = "src.server.server:cli"
+rc-im-native-mcp-server = "src.server.server:main"
 
 [project.urls]
 Homepage = "https://github.com/rongcloud/RC-IM-Native-MCP-Server"
