--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "rc-im-native-mcp-server"
-version = "0.1.3"
+version = "0.1.7"
 description = "基于MCP协议的融云IM服务（包装Rust SDK）"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -25,28 +25,27 @@ dev = [
 ]
 
 [project.scripts]
-rc-im-native-mcp-server = "src.server.server:main"
+rc-im-native-mcp-server = "native_mcp.server.server:main"
 
 [project.urls]
 Homepage = "https://github.com/rongcloud/RC-IM-Native-MCP-Server"
 Repository = "https://github.com/rongcloud/RC-IM-Native-MCP-Server.git"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src", "lib"]
+packages = ["native_mcp"]
 include = [
-    "src/**/*.py",
-    "lib/**/*.py",
-    "lib/**/*.so",
-    "lib/**/*.dylib",
-    "lib/**/*.dll"
+    "native_mcp/**/*.py",
+    "native_mcp/lib/**/*.so",
+    "native_mcp/lib/**/*.dylib",
+    "native_mcp/lib/**/*.dll"
 ]
 
 [tool.hatch.build]
 exclude = [
-    "src/imsdk/rust_db/",
-    "src/imsdk/rust_db/**/*",
-    "lib/rust_db/",
-    "lib/rust_db/**/*",
+    "native_mcp/imsdk/rust_db/",
+    "native_mcp/imsdk/rust_db/**/*",
+    "native_mcp/lib/rust_db/",
+    "native_mcp/lib/rust_db/**/*",
     "**/*.db",
     "**/*.db-shm",
     "**/*.db-wal",
@@ -61,11 +60,13 @@ exclude = [
     "config.json",
     "setup.py",
     "main.py",
-    ".python-version"
+    ".python-version",
+    "**/*.egg-info",
+    "**/*.egg-info/**/*"
 ]
 artifacts = [
-    "src/imsdk/rust_db/**",
-    "lib/rust_db/**"
+    "native_mcp/imsdk/rust_db/**",
+    "native_mcp/lib/rust_db/**"
 ]
 
 [tool.hatch.metadata]
