--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,8 @@ Thumbs.db
 *.db-shm
 *.db-wal
 *.kv
-src/imsdk/rust_db/RongCloud/*
-lib/rust_db/*
+native_mcp/imsdk/rust_db/RongCloud/*
+native_mcp/lib/rust_db/*
 *.lock
 *.egg-info/*
 
