--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,8 @@ exclude = [
 ]
 artifacts = [
     "native_mcp/imsdk/rust_db/**",
-    "native_mcp/lib/rust_db/**"
+    "native_mcp/lib/rust_db/**",
+    "readme_img/**"
 ]
 
 [tool.hatch.metadata]
