refactor: split send_message to private and group message send; translate annotation to english; add english README file;

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "hatchling.build"
 
 [project]
 name = "rc-im-native-mcp-server"
-version = "0.1.8"
-description = "基于MCP协议的融云IM服务（包装Rust SDK）"
+version = "0.1.10"
+description = "Rongcloud IM Service based on MCP Protocol (Rust SDK Wrapper)"
 readme = "README.md"
 requires-python = ">=3.10"
 authors = [
