--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,28 @@
-annotated-types>=0.7.0
-anyio>=4.9.0
-click>=8.2.1
-httpx>=0.28.1
-mcp[cli]>=1.9.0
-pydantic>=2.11.4
-pydantic-settings>=2.9.1
-python-dotenv>=1.1.0
-python-multipart>=0.0.20
-starlette>=0.46.2
-typing-extensions>=4.13.2
-uvicorn>=0.34.2
+annotated-types==0.7.0
+anyio==4.9.0
+certifi==2025.4.26
+click==8.2.1
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+httpx-sse==0.4.0
+idna==3.10
+markdown-it-py==3.0.0
+mcp==1.9.1
+mdurl==0.1.2
+pydantic==2.11.5
+pydantic-settings==2.9.1
+pydantic_core==2.33.2
+Pygments==2.19.1
+python-dotenv==1.1.0
+python-multipart==0.0.20
+rich==14.0.0
+-e git+ssh://git@gitlab2.rongcloud.net/lihaiyin/rc-im-mcp-demo.git@805f62e0a807350ccf30aaf6e7a90fa5bd35a9d6#egg=rongcloud_native_mcp_python
+shellingham==1.5.4
+sniffio==1.3.1
+sse-starlette==2.3.5
+starlette==0.46.2
+typer==0.16.0
+typing-inspection==0.4.1
+typing_extensions==4.13.2
+uvicorn==0.34.2
