--- a/.gitignore
+++ b/.gitignore
@@ -34,9 +34,10 @@ Thumbs.db
 *.db-shm
 *.db-wal
 *.kv
-native_mcp/imsdk/rust_db/RongCloud/*
-native_mcp/lib/rust_db/*
+src/imsdk/rust_db/RongCloud/*
+src/lib/rust_db/*
 *.lock
 *.egg-info/*
 
-native_mcp/package.json
+config.json
+src/package.json
